# LeMonHash

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  runExperiments.sh  runExperimentsVL.sh
.github/workflows/: build.yml
benchmark/: integerDistributions.cpp  simpleMmphfBenchmark.hpp  stringDistributions.cpp
include/: ChunkedStringMmphf.hpp  DirectRankStoring.hpp  ExampleCompetitorMmphfs.hpp  LeMonHash.hpp  LeMonHashHeuristic.hpp  LeMonHashV2.hpp  LeMonHashVL.hpp  LeMonHashVLIndexed.hpp  MultiRetrievalDataStructure.hpp  RecursiveDirectRankStoring.hpp
include/bucket_mapping/: BucketMapper.hpp  LinearBucketMapper.hpp  PGMBucketMapper.hpp  PgmBucketMapper.hpp  PolymorphicPGMBucketMapper.hpp  PolymorphicPgmBucketMapper.hpp  SegmentedLinearBucketMapper.hpp  ShortPgmBucketMapper.hpp  SuccinctPGMBucketMapper.hpp  SuccinctPgmBucketMapper.hpp  UnalignedPGMBucketMapper.hpp  UnalignedPgmBucketMapper.hpp
include/bucket_mapping/support/: EliasFanoModified.hpp  OptimalPiecewiseLinearModel.hpp  PGM.hpp  PointsStorage.hpp  PolymorphicPGM.hpp  ShortPGM.hpp  SuccinctPGM.hpp  UnalignedPGM.hpp  util.hpp
include/chunking_strategy/: BackChunkingStrategy.h  ChunkingStrategy.hpp  FullChunkingStrategy.h  GreedyChunkingStrategy.h  SeparateChunkingStrategy.h
include/chunking_strategy/support/: AlphabetMap.h  AlphabetMapsCollection.h  StringBuilder.hpp  util.h
include/support/: AlphabetMap.h  AlphabetMapsCollection.h  BitVectorBuilder.hpp  GrowingPastaBitVector.hpp  GrowingSdslBitVector.hpp  MultiRetrievalDataStructure.hpp  PartitionedEliasFano.hpp  SuccinctTree.hpp  TreePath.hpp  util.h
include/support/sequence/: BucketOffsets.hpp  DuplicateFilter.hpp  DuplicatesAwareEliasFano.hpp  EliasFanoModified.hpp  PartitionedEliasFano.hpp
